2012-09-25  Mikhail Pozdnyakov  <mikhail.pozdnyakov@intel.com>

        [WK2][WTR] WTR bundle client loads binary data as text
        https://bugs.webkit.org/show_bug.cgi?id=97532

        Reviewed by Kenneth Rohde Christiansen.

        WTR::InjectedBundlePage::decidePolicyForResponse now checks response MIME type
        and returns WKBundlePagePolicyActionPassThrough if it cannot be shown.

        * WebKitTestRunner/InjectedBundle/InjectedBundlePage.cpp:
        (WTR::InjectedBundlePage::decidePolicyForResponse):

2012-09-25  Zan Dobersek  <zandobersek@gmail.com>

        Unreviewed, another test case adjustment after r129459. Python 2.7 doesn't
        seem to be a requirement yet so the assertDictEqual method is not yet available
        on all builders. Assert that the empty dictionary length equals 0 instead.

        * Scripts/webkitpy/layout_tests/controllers/manager_unittest.py:
        (ResultSummaryTest.test_interpret_test_failures):

2012-09-24  Simon Hausmann  <simon.hausmann@digia.com>

        [Qt] Fix build with latest Qt 5
        https://bugs.webkit.org/show_bug.cgi?id=97479

        Reviewed by Tor Arne Vestbø.

        The variables for syncqt handling are now set in api.pri, but let's add a comment here that we can
        remove them from default_pre.prf once we're past Qt 5 beta2.

        * qmake/mkspecs/features/default_pre.prf:

2012-09-25  Zan Dobersek  <zandobersek@gmail.com>

        Unreviewed, adjusting the test cases after r129459. The JSON data
        for reftests now contains the 'reftest_type' key and no more 'is_reftest'
        or 'is_mismatch_reftest' keys.

        * Scripts/webkitpy/layout_tests/run_webkit_tests_integrationtest.py:
        (EndToEndTest.test_reftest_with_two_notrefs):

2012-09-24  Zan Dobersek  <zandobersek@gmail.com>

        Unexpected reftest passes are only reported when pixel testing is enabled in results.html as well
        https://bugs.webkit.org/show_bug.cgi?id=97426
